--- a/css/boxes.css
+++ b/css/boxes.css
@@ -1,20 +1,54 @@
-.box .pane-content {
-	font-size: 88.23%;
+h1, h2, h3, h4, h5, h6, legend, caption {
+	font-family: "Merriweather","Georgia","Cambria","Times New Roman","Times",serif;
+	font-weight: bold;
+	line-height: 1.3;
+	margin: 0;
+	text-rendering: optimizeLegibility;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	padding: 0 0 0.5em;
+}
+.box > .pane-title {
+	border: 1px solid #5b616b;
+	border-bottom: 0;
+	font-size: 100%;
+	padding: 0.9412em 1em 0.7647em;
+	text-align: center;
 }
 .box > .pane-content {
 	border: 1px solid #5b616b;
 	border-bottom-width: 4px;
 	padding: 1.3529em 1em;
 }
+
+.box > .pane-title + .pane-content, .box > .pane-title + .view-mode-block_header, .box > .view-mode-block_header + .pane-content {
+	border-top: 0;
+}
+
+.box .pane-content {
+	font-size: 88.23%;
+}
 .box > .pane-content > :last-child {
 	padding-bottom: 0px;
 }
 
 /* Multipurpose Box */
-
 .multi > .pane-title, .multi > .view-mode-block_header, .multi > .pane-content, .multi > .pane-content > .footer {
 	border-color: #5b616b;
 }
+.box.multi > .pane-title {
+	background-color: #5b616b;
+	color: #fff;
+}
+.box.multi > .pane-title, .box.multi > .pane-content > .footer {
+	background-color: #5b616b;
+	color: #fff;
+}
 .multi.related-info > .pane-title, .multi.related-info > .view-mode-block_header, .multi.related-info > .pane-content, .box.multi.related-info > .pane-content > .footer {
 	border-color: #2e8540;
+}
+.box.multi.related-info > .pane-title, .box.multi.related-info > .pane-content > .footer {
+	background-color: #2e8540;
+	color: #fff;
 }
