Better layout of font-faces

--- a/css/core/style.css
+++ b/css/core/style.css
@@ -1,7 +1,5 @@
-/**
- * Typography styles.
- * Baseline Grid: 1.5em (25.5px)
- */
+/** Font-faces *************************************************/
+ /* Baseline Grid: 1.5em (25.5px)*/
 
 @font-face {
   font-family: "Source Sans Pro";
