--- a/css/core/style.css
+++ b/css/core/style.css
@@ -371,7 +371,7 @@
 	}
 	header *, nav *, section *, footer * {
 		box-sizing: border-box;
-		*behavior: url('https://www.epa.gov/sites/all/themes/epa/inc/boxsizing.htc'):
+		*behavior: url('https://www.epa.gov/sites/all/themes/epa/inc/boxsizing.htc');
 	}
 	header *, nav *, section *, footer * {
 		-moz-transition: background-color .25s linear, border-color .25s linear, -moz-box-shadow .25s linear, box-shadow .25s linear, color .25s linear, opacity .25s linear, text-shadow .25s linear, -moz-transform .25s linear;
