--- a/css/core/style.css
+++ b/css/core/style.css
@@ -593,6 +593,10 @@
 	header .element-hidden {
 		display: none
 	}
+  .element-invisible {
+  clip: rect(1px,1px,1px,1px);
+  position: absolute!important;
+  }
   .element-invisible.element-focusable:active, .element-invisible.element-focusable:focus {
     clip: auto;
     position: static!important;
